--- a/CucumberSelenuim/pom.xml
+++ b/CucumberSelenuim/pom.xml
@@ -20,14 +20,14 @@
 			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-junit</artifactId>
 			<version>7.20.1</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-java</artifactId>
@@ -94,7 +94,7 @@
 			<plugin>
 				<groupId>net.masterthought</groupId>
 				<artifactId>maven-cucumber-reporting</artifactId>
-				<version>5.8.5</version>
+				<version>2.8.0</version>
 				<executions>
 					<execution>
 						<id>execution</id>
@@ -103,17 +103,15 @@
 							<goal>generate</goal>
 						</goals>
 						<configuration>
-							<jsonFiles>
-								${project.build.directory}/json-report/cucumber.json</jsonFiles>
 							<outputDirectory>
-								${project.build.directory}/cucumber-reports</outputDirectory>
-							<projectName>CucumberSelenium</projectName>
-							<buildNumber>${project.version}</buildNumber>
-							<skip>false</skip>
+								${project.build.directory}/masterthought-report/</outputDirectory>
+							<cucumberOutput>
+								${project.build.directory}/json-report/cucumber.json</cucumberOutput>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+
 		</plugins>
 	</build>
 </project>
